@@ -429,6 +429,12 @@ public class Hfs extends Tap<HadoopFlowProcess, JobConf, RecordReader, OutputCol
     }
 
   @Override
+  public boolean commitResource( JobConf conf ) throws IOException
+    {
+    return true;
+    }
+
+  @Override
   public boolean resourceExists( JobConf conf ) throws IOException
     {
     return getFileSystem( conf ).exists( new Path( getIdentifier() ) );
